28 June 2010: Wouter
	- Fix jostle list bug found by Vince (luoce@cnnic), it caused the qps
	  in overload situations to be about 5 qps for the class of shortly
	  serviced queries.
	  The capacity of the resolver is then about (numqueriesperthread / 2)
	  / (average time for such long queries) qps for long queries.
	  And about (numqueriesperthread / 2)/(jostletimeout in whole seconds)
	  qps for short queries, per thread.
	- Fix the max number of reply-address count to be applied for duplicate
	  queries, and not for new query list entries.  This raises the memory
	  usage to a max of (16+1)*numqueriesperthread reply addresses.

25 June 2010: Wouter
	- Fix handling of corner case reply from lame server, follows rfc2308.
	  It could lead to a nodata reply getting into the cache if the search
	  for a non-lame server turned up other misconfigured servers.
	- unbound.h has extern "C" statement for easier include in c++.

23 June 2010: Wouter
	- iana portlist updated.
	- makedist upgraded cross compile openssl option, like this: 
	  ./makedist.sh -s -wssl openssl-1.0.0a.tar.gz -w --enable-gost

22 June 2010: Wouter
	- Unbound reports libev or libevent correctly in logs in verbose mode.
	- Fix to unload gost dynamic library module for leak testing.

18 June 2010: Wouter
	- iana portlist updated.

17 June 2010: Wouter
	- Add AAAA to root hints for I.ROOT-SERVERS.NET.

16 June 2010: Wouter
	- Fix assertion failure reported by Kai Storbeck from XS4ALL, the
	  assertion was wrong.
	- updated ldns tarball.

15 June 2010: Wouter
	- tag 1.4.5 created.
	- trunk contains 1.4.6 in development.
	- Fix TCPreply on systems with no writev, if just 1 byte could be sent.
	- Fix to use one pointer less for iterator query state store_parent_NS.
	- makedist crosscompile to windows uses builtin ldns not host ldns.
	- Max referral count from 30 to 130, because 128 one character domains
	  is valid DNS.
	- added documentation for the histogram printout to syslog.

11 June 2010: Wouter